<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/new_bg"

    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_subscription"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:text="@string/subscription_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="start" />
        <EditText
            android:id="@+id/subscription_name"
            android:hint="@string/enter_subscription_name"
            android:inputType="text"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/subscription_cost" />
        <EditText
            android:id="@+id/subscription_cost"
            android:inputType="numberDecimal|numberSigned"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
        <TextView
            android:text="@string/next_due_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="start"
            android:labelFor="@+id/next_due_date" />
        <EditText
            android:id="@+id/next_due_date"
            android:inputType="date"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="1" />

        <Button
            android:id="@+id/done_button"
            android:text="@string/create_subscription"
            android:textColor="@color/white"
            android:background="#187ff5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/go_to_applications"
            android:text="@string/go_to_applications"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:background="#187ff5"
            android:layout_marginTop="8dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/cancel_button"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:background="#187ff5"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
